# advent-of-code-2025

./: Cargo.toml  run.sh  rustfmt.toml
src/: main.rs
src/day1/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
