[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.clippy]
# 1. High-value lint groups
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# 2. CLI-Specific Safety & correctness
unwrap_used = "deny"  # Forces you to handle errors (Result<T>) instead of crashing
expect_used = "deny"  # Forces meaningful error messages if you must crash
cast_possible_truncation = "allow" # strict, often annoying in CLIs, safer to allow unless dealing with sensitive math

# 3. Common "noise" suppression from pedantic group
module_name_repetitions = "allow" # "foo::foo_bar" is fine
struct_excessive_bools = "allow"  # specific args often need many bool flags